# db_central

./: .gitignore  README.md  REFACTORING_SUMMARY.md  example.db  example.py  orm.db  pyproject.toml
examples/: advanced_usage.py  basic_usage.py  error_handling.py
src/: demo.py  main.py
src/db_central/: __init__.py  database_manager.py  exceptions.py  models.py
src/db_central/db/config/: config_db.py
src/db_central/db/models/: __init__.py
src/db_central/db/operations/: author_operations.py  book_operations.py
src/db_central/db/seeds/: initial_data.py
src/db_central/db/tests/: conftest.py  test_db.py
src/db_central/tests/: __init__.py  test_database_manager.py
src/sql_model_practice/: __init__.py
src/sql_model_practice/db/config/: config_db.py
src/sql_model_practice/db/models/: __init__.py  author_and_book.py
src/sql_model_practice/db/operations/: author_operations_enhanced.py
src/sql_model_practice/db/seeds/: initial_data.py
src/sql_model_practice/db/tests/: conftest.py  test_database_manager.py  test_db.py
tests/: conftest.py  test_author_operations.py  test_book_operations.py  test_database_manager.py
