[project]
name = "sql-model-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rineheaj", email = "joshtrineheart@gmail.com" }
]
requires-python = ">=3.11"
dependencies = ["sqlmodel", "pytest"]

[project.scripts]
sql-model-practice = "sql_model_practice:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
