[project]
name = "db-central"
version = "0.1.0"
description = "A Python library designed to simplify database interactions using SQLAlchemy/SQLModel"
readme = "README.md"
authors = [
    { name = "rineheaj", email = "joshtrineheart@gmail.com" }
]
requires-python = ">=3.11"
dependencies = ["sqlmodel", "pytest"]

[project.scripts]
db-central = "db_central:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
